--- a/src/blocks/photo-grid/photo-grid.css
+++ b/src/blocks/photo-grid/photo-grid.css
@@ -6,7 +6,7 @@
 @media screen and (min-width: 768px) {
     .photo-grid {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, minmax(282px, 1fr));
         column-gap: 17px;
         row-gap: 20px;
         width: 100%;
@@ -16,7 +16,7 @@
 
 @media screen and (min-width: 1280px) {
     .photo-grid {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: repeat(3, minmax(282px, 1fr));
         margin: 47px 0 0;
     }
 }
